--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 *{
+    
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -511,8 +512,8 @@ text-transform: uppercase;
     background-color: #f71963;
     color: #f8f3f5;
     font-size: 13px;
-    height: 15%;
-    width: 25%;
+    height: 20%;
+    width: 35%;
     margin-left: 40px;
     cursor: pointer;
     border-radius: 10px;
@@ -525,3 +526,35 @@ text-transform: uppercase;
     background-color: transparent;
     color: #f71963;
 }
+.navegue{
+    font-size: 40px;
+    margin: 40px;
+    text-align: center;
+    justify-content: center ,center;
+    color:  #f71963;
+    text-decoration: none;
+    margin-left: 10px;
+    height: 70px;
+}
+.vtex{
+    height: 30vh;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: center;
+    font-size: 10px;
+    cursor: pointer;
+    gap: 30px;
+    
+}
+.vtex1{
+font-size: 83px;
+width: 130px;
+height: 130px;
+top: 2px;
+left: 761px;
+margin-left: 40px;
+border-radius:50%;
+box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.212);
+}
+
