--- a/style.css
+++ b/style.css
@@ -29,32 +29,32 @@ strong{
 /* meu header */
 
 .cabecalho {
-    width: 100vw;
+    width: 100%;
     height: 70px;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    border-top: 0.6px solid rgba(0, 0, 0, 0.164);
+    border-top: 0.3px solid rgba(0, 0, 0, 0.164);
     margin-bottom: 1px;
 }
 .rodape{
-    height: 70%;
+    height: 90px;
     padding-left: 40px;
-    border-top: 50.6px solid rgba(255, 252, 252, 0.164);
+    border-top: 0.3px solid rgba(255, 252, 252, 0.164);
 }
 img{
     
-    padding-left: 4rem;
+    padding-left: 0rem;
     padding-right: 0rem;
 }
 
 .cabecalho input{
     width: 45%;
     height: 40px;
-    font-size: 20px;
+    font-size: 18px;
     border-radius: 10px ;
     background-color: rgba(146, 136, 136, 0.315);
-    color: #ca4a6e;
+    color: #e90445;
     margin-bottom: 7px;
     margin-right: 20px;
     
@@ -66,7 +66,7 @@ img{
     position:relative;
     padding-left: 0rem;
     padding-right: 0rem;
-    margin-right: 1rem;
+    margin-right: 2rem;
     
 }
 .cabecalho li a {
@@ -86,22 +86,21 @@ img{
     justify-content: center;
     height: 10px;
     width: 100%;
-    padding: 10px;
-    margin: 0rem;
+    padding: 15px;
 }
 .lista-menu li{
-    font-size: 11px;
-    padding: 50px;
+    font-size: 10px;
+    padding: 40px;
     text-transform: uppercase;
     
 } 
 .lista-menu li a{
     color: #504649a4;
-    transform: all 600ms ease-in;
+    transform: al 600ms ease-in;
 }
 
 .lista-menu li a:hover{
-    font-size: 16px;
+    font-size: 17px;
     color:#f71963;
 }
 
@@ -112,12 +111,13 @@ img{
     background-position: center ,center;
     background-size: 100%;
     background-repeat: no-repeat;
-    width: 100vw;
+    width: 100%;
     height: 30vw;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: -2rem;
+    padding: 2rem;
+
 }
 
 .texto h1  {
@@ -125,7 +125,7 @@ img{
     width: 100%;
     height: 10%;
     font-size: 50px;
-    margin: 70px;
+    margin: 30px;
     margin-left: 80px;
     color: rgb(253, 253, 253);
     
@@ -136,7 +136,7 @@ img{
     height: 30%;
     font-size: 30px;
     margin-left: 80px;
-    color: rgb(252, 252, 252);
+    color: rgba(252, 252, 252, 0.795);
 }
 .botao{
     background-color: #f71963;
@@ -159,50 +159,32 @@ img{
 }
 
 /* buscar */
-.buscar {
-    margin: 10px;
-    margin-top: 3%;
-    display: flex;
-    align-items: center;
-    
-    
-}
-.buscar img{
-    width: 300px;
-    height: 50px;
-    margin-bottom: 110px;
-    display:inline-flex;
-    align-items: center ,center;
-    justify-content: center;
-    border-radius: 15px;    
-}
+
 .diversao {
-    
-    margin: 50px;
-    margin-top: 3%;
+    margin-top: 20px;
+    height: 200px;
     display: flex;
+    text-align: center;
     align-items: center ,center;
     flex-direction: row;
-    align-items: center,center;
-
-    padding-bottom: 3rem;
-    gap: 50px;
+    align-items: center;
+    padding-bottom: 4rem;
+    gap: 25px;
+    margin-left: 9%;
     
     
     
 }
 .diversao  img {
-    font-size: 40px;
-    height: 40px;
-    margin-bottom: 2.0rem;
+    height: 65%;
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
     border-radius: 3px 3px 3px 3px;
     box-shadow: 2px 2px 2px 2px  rgb(129, 126, 126);
-    background-color: rgb(217, 226, 235);
-    color: #e606515e;
+    background-color: rgba(255, 255, 255, 0.308);
+    color: #df23625e;
     transition: all 600ms ease-in;
     
     
@@ -215,45 +197,46 @@ img{
 }
 .diversao h3 {
     font-size: 15px;
-    display: grid;
     margin: 1.8rem;
     transition: all 600ms ease-in;
     align-items: center;
     text-align: center ,center;
-    
+    justify-content: center;
+    color: #e90445;
 }
 .titu1{
     margin: 20px;
-    margin-top: -4%;
+    margin-top: 3%;
     text-align: center;
     justify-content: center ,center;
-    padding-bottom: 1rem;
+    padding-bottom: 3rem;
     gap: 1rem;
     color:  #f71963;
     text-transform: uppercase;
-    border-top: 0.4px  #857777af;
     text-decoration: none;
     margin-left: 25px;
 }
+
+
 .conteudo-tele{
     background-position: center;
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: center, ;
+    justify-content: center ;
     align-items: center , center;
-    padding-bottom: 3rem;
-    margin-bottom: 10px;
-    margin-left: 25px;
+    padding-bottom: 2rem;
+    margin-bottom: 30px;
+    margin-left: 7px;
 }
 .txt1 {
-    font-size: 17px;
-    width: 220px;
+    font-size: 15px;
+    width: 100%;
     height: 30px;
     cursor: pointer;
     border: 1px solid #111011 ;
-    gap: 20rem;
-    left: 13rem;
+    gap: 10rem;
+    left: 12rem;
     transition: all 600ms ease-in;
 }
 .txt1:hover{
@@ -263,27 +246,26 @@ img{
 }
 /* celulares */
 .celulares{
-    left: 40vw;
-    width: 30vw;
-    display: flex;
+    left: 100%;
+    width: 100%;
+    display: contents;
     flex-direction: column;
     align-items: center , center;
     justify-content:right;
-    border: 2px;
     cursor: pointer;
     
     
 }
 .intens-celulares{
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: center, ;
     align-items: center ;
     padding-bottom: 5rem;
-    margin: 10px;
-    margin-left: 25px;
-    gap: 60px;
+    margin: 30px;
+    margin-left: 10px;
+    gap: 67px;
     
 }
 .intens-celulares .informaçao{
@@ -292,8 +274,7 @@ img{
     height: 200px;
     top : 22px;
     left: 343px;
-    border-radius: 1px 1px 1px 1px;
-    box-shadow: 1px 1px 1px 3px rgba(73, 68, 68, 0.384);
+    box-shadow: 1px 1px 1px 3px rgba(92, 86, 86, 0.247);
     align-items: center;
     justify-content: center , center;
     flex-direction: row;
@@ -307,17 +288,16 @@ img{
     top : 22px;
     left: 33px;
     margin-left: 25px;
-    border-radius: 1px 1px 1px 1px;
-    box-shadow: 1px 1px 1px 3px rgba(73, 68, 68, 0.384);
+    box-shadow: 1px 1px 1px 3px rgba(73, 68, 68, 0.274);
     align-items: center;
     text-align: center;
     justify-content: center , center;
     flex-direction: row;
+    border-radius: 5px;
     
 }
 .intens-celulares h5 {
     font-size: 12px;
-    gap: 20px;
     border: 2px;
     align-items: center ,center;
     margin-left: 10px;
@@ -329,7 +309,7 @@ img{
     height: 30px;
     font-size: 15px;
     text-transform: uppercase;
-    color:#817581;
+    color:#817581ce;
     text-decoration: line-through;
 }
 .intens-celulares h4{
@@ -527,7 +507,7 @@ text-transform: uppercase;
     color: #f71963;
 }
 .navegue{
-    font-size: 40px;
+    font-size: 35px;
     margin: 40px;
     text-align: center;
     justify-content: center ,center;
@@ -537,7 +517,7 @@ text-transform: uppercase;
     height: 70px;
 }
 .vtex{
-    height: 160px;
+    height: 180px;
     display: flex;
     align-items: center;
     flex-direction: row;
@@ -595,7 +575,7 @@ text-transform: uppercase;
     font-size: 18px;
     text-align: center center;
     align-items: center;
-    margin-left: 55px;
+    margin-left: 4px;
 
 }
 .pagamentos img {
@@ -642,12 +622,13 @@ text-transform: uppercase;
     height: 30px;
     margin-left: 19px;
     margin-top: 7px;
+    
 }
 .botao1{
     background-color: #f71963;
     height: 20px;
     width: 35px;
-    color: #f8f3f5;
+    color: #fffefe;
     text-transform: uppercase;
 }
 .botao1:hover{
@@ -662,15 +643,19 @@ text-transform: uppercase;
     display: flex;
     align-items: center;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-around;
     border-top: 0.6px solid rgb(255, 255, 255);
-    background-color: #2b282b;
+    background-color: #382e38;
 }
 .final h4{
     color: #f8f3f5;
+    gap: 30px;
 }
+
 .final1{
     margin: 1%;
-    width: 20%;
-    height: 20%;
+    width: 15%;
+    height: 17%;
 }
+
+
