--- a/style.css
+++ b/style.css
@@ -344,6 +344,78 @@ text-transform: uppercase;
     background-color:#fcf8f9;
     color:#f71963;
 }
+
+.janela-modal{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(13, 14, 14, 0.575);
+    display:none;
+    align-items: center;
+    justify-content: center;
+    z-index: 999;
+}
+.modal{
+    width: 50%;
+    height: 45%;
+    min-width: 450px;
+    min-height: 200px;
+    background-color:rgb(255, 254, 254);
+    backdrop-filter: blur(10px);
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content:center ;
+    font-size: 9px;
+    gap: 60px;
+    
+}
+
+
+.fechar{
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    border: 0;
+    background-color: red;
+    color: white;
+    font-size: 20px;
+    cursor: pointer;
+}
+.txtmodal{
+    font-size: 15px;
+    line-height: 30px;
+    
+}
+.txtmodal h3 strong{
+    
+    color: #0c0c0c;
+}
+.txtmodal input{
+    height: 20px;
+    width: 90px;
+    background-color: #2b282b4f;
+    gap: 20px;
+    border: #111011;
+}
+.comprarmodal{
+    background-color: #f71963;
+    color: white;
+    justify-content: end;
+    height: 40px;
+    width: 90px;
+    border-radius: 10px;
+}
+
+.janela-modal.abrir{
+    display: flex;
+}
 .parceiros{
     width: 100%;
     height: 100%;
