--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@ img{
     align-items: center ,center;
     flex-direction: row;
     padding-bottom: 3rem;
-    gap: 6%;
+    gap: 5.5%;
     margin-left: 6%;
 }
 .diversao h3{
@@ -200,6 +200,7 @@ img{
 }
 .diversao  img {
     height: 65%;
+    width: 85%;
     display: flex;
     padding: 1rem;
     justify-content: center;
