--- a/media-query.css
+++ b/media-query.css
@@ -1,5 +1,8 @@
 @media only screen and (min-width: 1700px)
 { 
+    
+.diversao  img {
+    width: 100%;}
     .card{
         width: 370px;
         height: 470px;
