--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ img{
     color:rgba(247, 25, 99, 1);
     margin-bottom: 0px;
     margin-right: -20px;
-    
+    padding: 12px;
     
 }
 
@@ -201,7 +201,7 @@ img{
     text-align: center;
 }
 .diversao  img {
-    height: 65%;
+    height: 64%;
     width: 85%;
     display: flex;
     padding: 1rem;
